...
        if let groupDefaults = UserDefaults(suiteName: "group.dev.skynolimit.traintrack") {
            userDefaults = groupDefaults
        } else {
            userDefaults = .standard
        }
        #if DEBUG
        if ProcessInfo.processInfo.environment["UI_TEST_RESET_JOURNEYS"] == "1" {
            userDefaults.removeObject(forKey: journeysKey)
            userDefaults.removeObject(forKey: favouriteManualOrderKey)
            userDefaults.removeObject(forKey: myJourneysManualOrderKey)
            userDefaults.removeObject(forKey: "siri_default_route_id_v1")
            userDefaults.removeObject(forKey: "siri_route_names_v1")
            userDefaults.removeObject(forKey: "siri_route_names_v2")
        }
        #endif
        loadJourneys()
        loadManualOrders()
        #if DEBUG
        if ProcessInfo.processInfo.environment["APP_STORE_SCREENSHOTS"] == "1" {
            loadAppStoreScreenshotJourneys()
        }
        #endif
    }

    func loadJourneys() {
...
    }

    #if DEBUG
    private func loadAppStoreScreenshotJourneys() {
        let kentHouse = Station(crs: "KTH", name: "Kent House", longitude: "-0.045786", latitude: "51.412659")
        let victoria = Station(crs: "VIC", name: "London Victoria", longitude: "-0.144200", latitude: "51.495100")
        let eastCroydon = Station(crs: "ECR", name: "East Croydon", longitude: "-0.093335", latitude: "51.375679")
        let brighton = Station(crs: "BTN", name: "Brighton", longitude: "-0.141234", latitude: "50.829659")
        let paddington = Station(crs: "PAD", name: "London Paddington", longitude: "-0.176049", latitude: "51.516014")
        let oxford = Station(crs: "OXF", name: "Oxford", longitude: "-1.270037", latitude: "51.753549")
        let kingsCross = Station(crs: "KGX", name: "London Kings Cross", longitude: "-0.122907", latitude: "51.530827")
        let cambridge = Station(crs: "CBG", name: "Cambridge", longitude: "0.137584", latitude: "52.194519")
        let euston = Station(crs: "EUS", name: "London Euston", longitude: "-0.134545", latitude: "51.528313")
        let birmingham = Station(crs: "BHM", name: "Birmingham New Street", longitude: "-1.898375", latitude: "52.478153")
        let manchester = Station(crs: "MAN", name: "Manchester Piccadilly", longitude: "-2.228991", latitude: "53.476704")
        let leeds = Station(crs: "LDS", name: "Leeds", longitude: "-1.549089", latitude: "53.795158")
        let edinburgh = Station(crs: "EDB", name: "Edinburgh Waverley", longitude: "-3.188236", latitude: "55.952442")
        let glasgow = Station(crs: "GLQ", name: "Glasgow Queen Street", longitude: "-4.251385", latitude: "55.863003")
...
